fix(components): fix rollercoaster size on mobile

--- a/src/styles/components/_rollercoaster.scss
+++ b/src/styles/components/_rollercoaster.scss
@@ -16,10 +16,12 @@
   img {
     border-radius: 50%;
     margin: 0 auto;
-    max-height: 340px;
-    max-width: 340px;
+    height: 240px;
+    width: 240px;
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    @media screen and (min-width: 762px) {
+      height: 350px;
+      width: 350px;
+    }
   }
 }
